# nisp

./: .gitignore  AGENTS.md  README.md  edit.rkt  info.rkt  lsp.rkt  main.rkt  validate-cache.rkt  validate-packages.rkt  validate.rkt
.github/workflows/: test.yml
cli/: edit.rkt  extract-packages.rkt  extract-schema.rkt  import.rkt  rename.rkt  schema.rkt  validate.rkt
docs/: api.md  editor-setup.md  language-reference.md
examples/: derivation.rkt  hello.rkt  nixos-module.rkt
lang/: reader.rkt
nix-parser/: Cargo.toml
nix-parser/src/: main.rs
tests/: cli-test.rkt  edit-test.rkt  emit-test.rkt  lsp-test.rkt  validate-test.rkt
