[package]
name = "nisp-nix-parser"
version = "0.1.0"
edition = "2021"
description = "Tiny shim over rnix-parser: stdin Nix source → stdout JSON AST"
license = "MIT"

[[bin]]
name = "nisp-nix-parser"
path = "src/main.rs"

[dependencies]
rnix = "0.11"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
